<resources>
    <string name="app_name">Tapsell Android Java Sample</string>
    <string name="rewarded_video">Rewarded Video</string>
    <string name="interstitial">Interstitial</string>
    <string name="show">Show</string>
    <string name="request">Request</string>
    <string name="destroy">Destroy</string>
    <string name="native_banner">Native Banner</string>
    <string name="standard_banner">Standard Banner</string>
    <string name="vast">Vast (PreRoll)</string>
    <string name="request_vast">Request VAST</string>
</resources>
