...
        private const val NATIVE_VIDEO = "f3fb937a-bb3d-4e54-8d4c-2f4aa963c74c"
        private const val BANNER = "e3d5999c-5990-4e31-8ce9-642ce040a7f4"
        private const val PRE_ROLL = "6977a96f-e265-4895-b219-33bb6ba3df85"
    }

    data object LegacyKeys : TapsellKeys {
        override val name = "Tapsell Legacy"
        override val rewarded get() = REWARDED
        override val interstitial get() = INTERSTITIAL
        override val banner get() = BANNER
        override val native get() = NATIVE_BANNER
        override val preRoll get() = PRE_ROLL
        val nativeVideo get() = NATIVE_VIDEO
...
        private const val INTERSTITIAL = "4d268df4-7e8a-43d8-a014-02b4aeff1e72"
        private const val NATIVE = "88eab80b-113b-4856-8dc2-4aa571c4d7c3"
        private const val BANNER = "ddd6c321-1f1f-4396-8524-a4f760063b2f"
    }

    data object YandexKeys : TapsellKeys {
        override val name = "Yandex"
        override val rewarded get() = REWARDED
        override val interstitial get() = INTERSTITIAL
        override val appOpen get() = APP_OPEN
        override val banner get() = BANNER
        override val native get() = NATIVE
        override val preRoll get() = PRE_ROLL
...
