appId: ir.tapsell.sample
---
- launchApp:
    appId: ir.tapsell.sample
    clearState: true
- startRecording: Native
- extendedWaitUntil:
      visible: "onInitializationComplete.*"
      timeout: 15000
- tapOn:
    text: Native
- tapOn:
      text: Tapsell Legacy
      repeat: 1
      delay: 2000
- tapOn:
    text: Native Video
    repeat: 1
    delay: 2000
- tapOn:
    text: Request
    repeat: 1
    delay: 5000
- extendedWaitUntil:
    visible: .*onSuccess.*
    timeout: 5000
- tapOn:
    text: Show
    waitToSettleTimeoutMs: 2000
- assertVisible:
    text: .*onAdImpression.*
- tapOn:
    text: .*کلیک.*
- back
- assertVisible:
    text: .*onAdClicked.*
- stopRecording
- takeScreenshot: maestro-outputs/Native
- stopApp